--- a/client/index.jade
+++ b/client/index.jade
@@ -11,6 +11,9 @@ html(ng-app='directives-demo', lang='en')
     link(href='/index.css', rel='stylesheet')
     link(href='/components/directives/gr-greeting/gr-greeting.css', rel='stylesheet')
     link(href='/components/directives/gr-clock/gr-clock.css', rel='stylesheet')
+    link(href='/components/directives/gr-stock/gr-stock.css', rel='stylesheet')
+    link(href='/components/directives/gr-weather/gr-weather.css', rel='stylesheet')
+    link(href='/components/directives/gr-movie/gr-movie.css', rel='stylesheet')
   body
     include nav
     .container
@@ -38,4 +41,7 @@ html(ng-app='directives-demo', lang='en')
     script(src='/components/factories/http-interceptor.js')
     script(src='/components/directives/gr-greeting/gr-greeting.js')
     script(src='/components/directives/gr-clock/gr-clock.js')
+    script(src='/components/directives/gr-stock/gr-stock.js')
+    script(src='/components/directives/gr-weather/gr-weather.js')
+    script(src='/components/directives/gr-movie/gr-movie.js')
 
