--- a/client/components/directives/gr-stock/gr-stock.less
+++ b/client/components/directives/gr-stock/gr-stock.less
@@ -1,8 +1,8 @@
-div[gr-clock]{
+div[gr-stock]{
   border: 1px dashed black;
   margin-top: 20px;
   margin-bottom: 10px;
   border-radius: 10px;
   padding: 10px;
-  background-color: yellow;
+  background-color: lime;
 }
